refactor: 全面 DDD 架构重构与代码优化
- refactor(user): 迁移 ports 到 domain/port 包，删除旧 output 包，简化 enums 为 record
- refactor(product): 重构 Product/ProductDetail 为不可变对象，Port 接口归一化
- refactor(order): 实现订单行项支持，重构 OrderAggregate 状态机，删除旧 infrastructure/config
- refactor(payment): 重构 PaymentAggregate，删除旧 Port/Factory/Converter，简化 IdempotencyKey
- refactor(message): 迁移 entity 到 domain，重构仓储和命令处理器，删除旧 OutboundPort
- refactor(favorite): 简化 Port 接口引用
- refactor(framework): 删除旧 RateLimiter/RepeatSubmit/LogoutHandler，新增 RateLimitFilter
- refactor(admin): 迁移 controller 到 adapter.inbound.web，删除旧 extension 类
- refactor(ai): 优化 SemanticSearchService，新增 AI 请求/响应 DTO
- test: 更新所有模块测试用例适配新架构，新增消息/支付/订单综合测试
- feat(frontend): HeroSection 全新 UI 设计(毛玻璃/粒子/浮动卡片)，优化登录页
- feat(frontend): 实现 AdminRouteGuard 管理端路由守卫，重构 session 管理
- feat(frontend): AI 组件测试套件，优化通知/聊天 Hook
- chore: 新增 Gitee CI 工作流，Flyway V3 索引迁移脚本，JVM 配置
- docs: 更新 AGENTS.md 文档，清理过时文档